# pytest-retry-conftest-plugin

./: README.md  pyproject.toml
tests/: base_test.py  utils.py
tests/dir_a/: a_test.py  conftest.py
